# app/Http/Requests/User/EditUserRequest.php
@@ -1,0 +1,35 @@
+<?php
+
+namespace App\Http\Requests\User;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class EditUserRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *@return array<string, mixed>
+     */
+    public function rules(): array
+    {
+        return [
+            'first_name' => ['required', 'string'],
+            'last_name' => ['required', 'string'],
+            'email' => ['required', 'email','unique:users'],
+            'password' => ['required', 'string', 'min:6', 'confirmed'],
+            'password_confirmation' => ['required', 'string', 'min:6', 'same:password'],
+            'avatar' => ['required', 'string'],
+            'address' => ['required', 'string'],
+            'phone_number' => ['required', 'string'],
+            'is_marketing' => ['nullable', 'string'],
+        ];
+    }
+}
